--- a/Symfony-Biblioteca/src/AppBundle/Resources/views/Usuario/index.html.twig
+++ b/Symfony-Biblioteca/src/AppBundle/Resources/views/Usuario/index.html.twig
@@ -4,45 +4,45 @@
 {% block title %}My cool blog posts{% endblock %}
 
 {% block body %}
-    <div class="row py-5">
+    <div class="row py-53">
         <div class="col-12 col-md-8 offset-md-2">
             <h2>Criar Usuário</h2>
             <form action="{{ path('app_usuario_create') }}" method="POST">
-        <div class="form-group">
-            <label>Nome:</label>
-            <input name="nome" type="text" class="form-control" required>
-        </div>
+                <div class="form-group">
+                    <label>Nome:</label>
+                    <input name="nome" type="text" class="form-control" required>
+                </div>
 
-        <div class="form-group">
-            <label>Sexo:</label>
-            <select name="sexo" class="form-control" required>
-                <option value="M">Masculino</option>
-                <option value="F">Feminino</option>
-            </select>
-        </div>
+                <div class="form-group">
+                    <label>Sexo:</label>
+                    <select name="sexo" class="form-control" required>
+                        <option value="M">Masculino</option>
+                        <option value="F">Feminino</option>
+                    </select>
+                </div>
 
-        <div class="form-group">
-            <label>Data de Nascimento:</label>
-            <input name="nascimento" type="text" class="form-control" required>
-        </div>
+                <div class="form-group">
+                    <label>Data de Nascimento:</label>
+                    <input name="nascimento" type="text" class="form-control" required>
+                </div>
 
-        <div class="form-group">
-            <label>CEP:</label>
-            <input name="cep" type="text" class="form-control" required>
-        </div>
+                <div class="form-group">
+                    <label>CEP:</label>
+                    <input name="cep" type="text" class="form-control" required>
+                </div>
 
-        <div class="form-group">
-            <label>CPF:</label>
-            <input name="cpf" type="text" class="form-control" required>
-        </div>
+                <div class="form-group">
+                    <label>CPF:</label>
+                    <input name="cpf" type="text" class="form-control" required>
+                </div>
 
-        <div class="form-group">
-            <label>Contato:</label>
-            <input name="contato" type="text" class="form-control" required>
-        </div>
+                <div class="form-group">
+                    <label>Contato:</label>
+                    <input name="contato" type="text" class="form-control" required>
+                </div>
 
-        <button type="submit" class="btn btn-block btn-primary">Cadastrar</button
-    </form>
+                <button type="submit" name="_token" value="{{ csrf_token('token') }}" class="btn btn-block btn-primary">Cadastrar</button>
+            </form>
         </div>
     </div>
 {% endblock %}
